css_/style.css
/* ... */
.close {
    background: #606061;
    color: #FFFFFF;
    line-height: 25px;
    position: absolute;
    right: -12px;
    text-align: center;
    top: -10px;
    display: none;
    width: 24px;
    text-decoration: none;
    font-weight: bold;
    -webkit-border-radius: 12px;
    -moz-border-radius: 12px;
    border-radius: 12px;
    -moz-box-shadow: 1px 1px 3px #000;
    -webkit-box-shadow: 1px 1px 3px #000;
    box-shadow: 1px 1px 3px #000;
}

.popupnote {
    font-size: 12px;
    text-align: center;
    display: block;
    padding-top: 10px;
}

.payment {
    float: left;
    display: block;
    width: 325px;
    font-size: 16px;
    text-align: center;
    color: #252525;
    margin: 15px 0 0 10px;
    padding: 50px 0 0 35px;
    background-image: url("../image.php?comnt=forma_check.png"), url("../image.php?comnt=forma_stars.png");
    background-position: 75px 40px, top center;
    background-repeat: no-repeat;
    box-sizing: border-box;
}

.sales {
    float: left;
    display: block;
    width: 358px;
    font-size: 14px;
    text-align: center;
    color: #000;
    margin: 10px 0 0 0;
}

.sales-l {
    float: left;
    display: block;
    width: 180px;
    font-size: 14px;
    text-align: center;
    color: #000;
    margin: 0;
    padding: 0;
    background-image: url("../image.php?comnt=sales-100.png");
    background-position: 51px 32px;
    background-repeat: no-repeat;
}

.sales-l-sale {
    float: right;
    display: block;
    text-align: center;
    color: #000;
    margin: 5px 55px 0 0;
    padding: 0 2px 1px 2px;
    background-color: #fafafa;
    border: 1px solid #000;
}

.sales-r {
    float: right;
    display: block;
    width: 170px;
    font-size: 14px;
    text-align: center;
    color: #000;
    margin: 0;
    padding: 0;
}

.sigurno {
    float: left;
    background: url("../image.php?comnt=security.png");
    background-position: 75px 15px;
    background-repeat: no-repeat;
    text-align: center;
    display: block;
    width: 358px;
    font-size: 16px;
    line-height: 45px;
    color: #252525;
    margin-right: -55px;
    margin-top: 20px;
    padding-top: 5px;
    padding-left: 30px;
    border-top: 1px dashed #79bd42;
    box-sizing: border-box;
}

.crvenaS {
    color: red!important;
}

hr {
    width: 100%;
    height: 1px;
}

.story07 {
    margin-left: 25px;
}

.scroll {
    cursor: pointer;
}


/* --------------------- */


/* ----- COUNTDOWN ----- */


/* --------------------- */

.countdownHolder {
    width: 150px;
    margin: 0 auto;
    margin-top: 0px;
    font-size: 33px;
    line-height: 1.2em;
    text-align: center;
    letter-spacing: -3px;
}

.position {
    display: inline-block;
    height: 1.2em;
    overflow: hidden;
    position: relative;
    width: 0.9em;
}

.digit {
    position: absolute;
    display: block;
    width: 0.8em;
    background-color: #444;
    border-radius: 0.2em;
    text-align: center;
    color: #fff;
    letter-spacing: -1px;
}

.digit.static {
    box-shadow: 1px 1px 1px rgba(4, 4, 4, 0.35);
    background-image: linear-gradient(bottom, #3A3A3A 50%, #444444 50%);
    background-image: -o-linear-gradient(bottom, #3A3A3A 50%, #444444 50%);
    background-image: -moz-linear-gradient(bottom, #3A3A3A 50%, #444444 50%);
    background-image: -webkit-linear-gradient(bottom, #3A3A3A 50%, #444444 50%);
    background-image: -ms-linear-gradient(bottom, #3A3A3A 50%, #444444 50%);
    background-image: -webkit-gradient( linear, left bottom, left top, color-stop(0.5, #3A3A3A), color-stop(0.5, #444444));
}

.countDays {
    /* display:none !important;*/
}

.countDiv0 {
    /* display:none !important;*/
}

.countHours {}

.countDiv1 {}

.countMinutes {}

.countDiv2 {}

.countSeconds {}

.countDiv {
    display: inline-block;
    width: 10px;
    height: 1.3em;
    position: relative;
    margin-right: 2px;
}

.countDiv:before,
.countDiv:after {
    position: absolute;
    width: 5px;
    height: 5px;
    background-color: #444;
    border-radius: 50%;
    left: 50%;
    margin-left: -3px;
    top: 0.5em;
    box-shadow: 1px 1px 1px rgba(4, 4, 4, 0.5);
    content: '';
}

.countDiv:after {
    top: 0.9em;
}


/* --------------------- */


/* --------------------- */


/* --------------------- */

@media (max-width:999px) {
    #floater {
        display: none;
    }
    .banner_contact_wrapper {
        border: 0;
    }
    .hollywood_star_wrapper {
        border-width: 1px 0;
    }
    .disclamer_fixed {
        padding: 3px 0 !important;
        font-size: 15px !important;
        line-height: 1.0em !important;
        text-align: center !important;
        position: relative !important;
        width: auto !important;
        left: auto !important;
        bottom: auto !important;
        border: 0 !important;
        margin: 0 !important;
        border-radius: 0 !important;
    }
}

@media (max-width:959px) {
    .header {
        margin-top: 0;
        margin-bottom: 15px;
        font-size: 20px;
        border-width: 2px 0 2px 0;
    }
    #header_form h1 {
        font-size: 56px;
    }
    .contact-form-box {
        max-width: 330px;
    }
    .hollywood_star_wrapper {
        background-image: url("../image.php?comnt=img_01.jpg");
        background-position: center bottom;
    }
    .hollywood_star_wrapper h6 {
        width: 100%;
        font-size: 20px;
        padding: 20px 0 200px;
    }
}

@media (max-width:779px) {
    #left_side_wrapper {
        clear: both;
        float: none;
        width: 98%;
        margin: 20px auto;
    }
    #right_side_wrapper {
        clear: both;
        float: none;
        width: 100%;
        margin: 20px auto;
    }
}
/* ... */

